--- a/main/src/main/resources/static/css/pdf.css
+++ b/main/src/main/resources/static/css/pdf.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 4px);
+    height: calc(100vh);
 }
 
 header {
@@ -20,7 +20,7 @@ header {
     justify-content: center;
     align-items: center;
     width: 50%;
-    height: 90%;
+    height: calc(100vh - 100px);
     min-width: 1000px; /* Largura mínima */
 }
 
