--- a/main/src/main/resources/templates/best-mate-chess.html
+++ b/main/src/main/resources/templates/best-mate-chess.html
@@ -39,10 +39,12 @@
 	1. c3 { [%clk 0:05:00] } { A00 Saragossa Opening } 1... Nf6 { [%clk 0:05:00] } 2. d4 { [%clk 0:04:59] } 2... d5 { [%clk 0:05:00] } 3. Qc2 { [%clk 0:05:00] } 3... c5 { [%clk 0:04:59] } 4. Bf4 { [%clk 0:04:59] } 4... Nc6 { [%clk 0:04:59] } 5. e3 { [%clk 0:04:59] } 5... Qb6 { [%clk 0:05:00] } 6. Nd2 { [%clk 0:04:59] } 6... cxd4 { [%clk 0:04:50] } 7. exd4 { [%clk 0:04:56] } 7... Bg4 { [%clk 0:04:44] } 8. h3 { [%clk 0:04:52] } 8... Bh5 { [%clk 0:04:44] } 9. Ngf3 { [%clk 0:04:25] } 9... Rc8 { [%clk 0:04:44] } 10. a3 { [%clk 0:04:18] } 10... Nxd4 { [%clk 0:04:38] } 11. Nxd4 { [%clk 0:04:15] } 11... Qxd4 { [%clk 0:04:40] } 12. Bb5+ { [%clk 0:04:01] } 12... Nd7 { [%clk 0:04:40] } 13. Bxd7+ { [%clk 0:03:55] } 13... Kxd7 { [%clk 0:04:40] } 14. Be3 { [%clk 0:03:41] } 14... Qf6 { [%clk 0:04:27] } 15. Bxa7 { [%clk 0:03:26] } 15... e5 { [%clk 0:04:13] } 16. Nb3 { [%clk 0:03:19] } 16... Bg6 { [%clk 0:04:13] } 17. Qd2 { [%clk 0:03:08] } 17... Qe6 { [%clk 0:04:07] } 18. Rd1 { [%clk 0:02:59] } 18... d4 { [%clk 0:04:01] } 19. Na5 { [%clk 0:02:23] } 19... Bc5 { [%clk 0:02:45] } 20. Bxc5 { [%clk 0:02:12] } 20... Rxc5 { [%clk 0:02:48] } 21. Nxb7 { [%clk 0:02:14] } 21... Rd5 { [%clk 0:02:42] } 22. c4 { [%clk 0:02:02] } 22... Rd6 { [%clk 0:02:32] } 23. Nxd6 { [%clk 0:01:55] } 23... Qxd6 { [%clk 0:02:35] } 24. Qb4 { [%clk 0:01:51] } 24... Qxb4+ { [%clk 0:02:35] } 25. axb4 { [%clk 0:01:51] } 25... Rb8 { [%clk 0:02:28] } 26. b5 { [%clk 0:01:53] } 26... Kd6 { [%clk 0:02:30] } 27. Kd2 { [%clk 0:01:53] } 27... Kc5 { [%clk 0:02:30] } 28. b3 { [%clk 0:01:54] } 28... Kb4 { [%clk 0:02:26] } 29. h4 { [%clk 0:01:38] } 29... h5 { [%clk 0:02:26] } 30. Rhe1 { [%clk 0:01:32] } 30... f6 { [%clk 0:02:26] } 31. f4 { [%clk 0:01:28] } 31... e4 { [%clk 0:02:24] } 32. Kc2 { [%clk 0:01:28] } 32... d3+ { [%clk 0:02:09] } 33. Kb2 { [%clk 0:01:30] } 33... Ra8 { [%clk 0:01:24] } 34. Ra1 { [%clk 0:01:29] } 34... Rxa1 { [%clk 0:01:23] } 35. Rxa1 { [%clk 0:01:31] } 35... e3 { [%clk 0:01:25] } 36. Ra4+ { [%clk 0:01:32] } 36... Kc5 { [%clk 0:01:26] } 37. Kc3 { [%clk 0:01:34] } 37... d2 { [%clk 0:01:13] } 38. Ra6 { [%clk 0:01:32] } 38... d1=N# { [%clk 0:00:56] } { Black wins by checkmate. } 0-1
 	
 	'">
+	<div class="content2">
+
+		<div th:insert="~{fragments/content/chess :: chess(pgn=${pgnText})}"></div>
+	</div>
 	
-	<div th:insert="~{fragments/content/chess :: chess(pgn=${pgnText})}"></div>
-	
-	
+	<div th:insert="~{fragments/layouts/footer :: footerFragment}"></div>
 	
 </body>
 
