--- a/main/src/main/resources/templates/outros.html
+++ b/main/src/main/resources/templates/outros.html
@@ -2,11 +2,11 @@
 <html lang="pt-BR" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Blog</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Meu Blog</title>
 
-    <link rel="stylesheet" href="./css/content-button.css">
+<link rel="stylesheet" href="./css/content-button.css">
 
 
 </head>
@@ -15,30 +15,31 @@
 
 
 
-    <div th:insert="~{fragments/layouts/header :: headerFragment}"></div>
+	<div th:insert="~{fragments/layouts/header :: headerFragment}"></div>
 
-    <div class="section">
-        <a th:href="@{/outros/diploma}" class="card">
-            <img src="/img/home/diploma.png" alt="Imagem do Portfólio">
-            <div class="text">
-                <div class="title">diploma</div>
-            </div>
-        </a>
-        <a th:href="@{/outros/shaders}" class="card">
-            <img src="/img/home/sombreador.png" alt="Imagem do Portfólio">
-            <div class="text">
-                <div class="title">SPH shaders</div>
-                
-	        </div>
-        </a>
-		
-		<a th:href="@{/test}" class="card">
-		            <div class="text">
-		                <div class="title">test</div>
-		                
-			        </div>
-		</a>
-    </div>
+	<div class="content2">
+		<div class="section">
+			<a th:href="@{/outros/diploma}" class="card"> <img
+				src="/img/home/diploma.png" alt="Imagem do Portfólio">
+				<div class="text">
+					<div class="title">diploma</div>
+				</div>
+			</a> <a th:href="@{/outros/shaders}" class="card"> <img
+				src="/img/home/sombreador.png" alt="Imagem do Portfólio">
+				<div class="text">
+					<div class="title">SPH shaders</div>
+
+				</div>
+			</a> <a th:href="@{/test}" class="card">
+				<div class="text">
+					<div class="title">test</div>
+
+				</div>
+			</a>
+		</div>
+	</div>
+
+	<div th:insert="~{fragments/layouts/footer :: footerFragment}"></div>
 </body>
 
 </html>
