--- a/main/src/main/resources/templates/contato.html
+++ b/main/src/main/resources/templates/contato.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Meu Blog</title>
+<title>arthur-fb contato</title>
 
 <link rel="stylesheet" href="./css/contato.css" />
 
@@ -96,7 +96,7 @@
 	</script>
 
 	<script src="./js/style/copiar.js"></script>
-	<script src="./js/services/contato/contato.js"></script>
+	<script src="./js/services/form/contato.js"></script>
 </body>
 
 </html>
