--- a/main/src/main/resources/templates/fragments/content/chess.html
+++ b/main/src/main/resources/templates/fragments/content/chess.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <div xmlns:th="http://www.thymeleaf.org" th:fragment="chess(pgn)">
 
-	
+	<link href="/css/chess.css" type="text/css" rel="stylesheet" />
 	<form style="display: none;">
 	        <textarea style="display: none;" id="pgnText" th:text="${pgn}">
 				
