--- a/main/src/main/resources/templates/test.html
+++ b/main/src/main/resources/templates/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Visualizador de PDF</title>
+    <title>arthur-fb teste</title>
     <link rel="stylesheet" href="./css/pdf.css">
   <link rel="stylesheet" href="./css/footer.css">
   
