--- a/main/src/main/resources/static/css/contato.css
+++ b/main/src/main/resources/static/css/contato.css
@@ -115,8 +115,9 @@ to {
 }
 
 /* Ajustes responsivos */
-@media ( max-width : 600px) {
+@media ( max-width : 800px) {
 	.container {
+		width: 80%;
 		padding: 10px;
 	}
 	h1, h2 {
