--- a/main/src/main/resources/templates/best-mate-chess.html
+++ b/main/src/main/resources/templates/best-mate-chess.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>WebGL Demo</title>
+  <title>arthur-fb meu jogo mais bonito de xadrez</title>
   
 
-  <link href="/css/chess.css" type="text/css" rel="stylesheet" />
+  
 
   
 
