--- a/main/src/main/resources/templates/diploma.html
+++ b/main/src/main/resources/templates/diploma.html
@@ -4,9 +4,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Meu Blog</title>
+<title>arthur-fb diploma</title>
 
-<link rel="stylesheet" href="./css/contato.css" />
 
 
 </head>
