--- a/main/src/main/resources/templates/portfolio.html
+++ b/main/src/main/resources/templates/portfolio.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Meu Blog</title>
+<title>Meu Blog portifolio</title>
 
 <link rel="stylesheet" href="./css/portfolio.css" />
 
